# osu

./: .gitignore  README.md  docker-compose.override.yml  docker-compose.tests.yml  docker-compose.yml  first_deploy.sh
admin/: db.sqlite3  manage.py
admin/Lifecourse/: asgi.py  settings.py  urls.py  wsgi.py
admin/Lifecourse/static/css/: index.css
admin/Lifecourse/templates/: base.html  inc_form.html
admin/University/: admin.py  models.py  urls.py  views.py
admin/University/migrations/: 0001_initial.py
admin/accounts/: admin.py  urls.py  views.py
api-service/: Dockerfile  entrypoint.sh  pyproject.toml
api-service/migrations/: env.py
api-service/migrations/versions/: 799735942945_initial.py
api-service/src/api_service/: __init__.py  admin.py  auth.py  config.py  database.py  models.py  schemas.py  views.py
api-service/tests/: test_api_service.py
conf/: keycloak_configuration.json  nginx.conf
frontend/: .eslintignore  .eslintrc.cjs  .prettierignore  .prettierrc.cjs  Dockerfile  index.html  jest.config.js  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/libs/: StatusCodeEnum.ts  errorMessage.ts  localStorage.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Company.tsx  Feedback.module.scss  Feedback.test.tsx  Feedback.tsx  Header.tsx  Integration.module.scss  Integration.tsx  Opportunities.module.scss  Opportunities.tsx  OpportunitiesService.ts  RateItem.tsx  Rates.module.scss  Rates.tsx
infrastructure/: docker-compose.override.yml  docker-compose.yml  nginx.conf  teamcity.conf
(+105 files in other folders)
